cmake_minimum_required(VERSION 2.8.9)
project(MOP_TP3_LIB)
message(System Name : ${CMAKE_SYSTEM_NAME})
add_library(DisplayMessage STATIC DisplayMessage.cpp)
if(${CMAKE_SYSTEM_NAME} STREQUAL Windows)
	add_definitions(\D_SYSTEM_WINDOWS)
elseif(${CMAKE_SYSTEM_NAME} STREQUAL Linux)
	add_definitions(-D_SYSTEM_LINUX)
endif()